# tailor

./: .gitignore  README.md
.github/workflows/: rust.yml
CLI/: Cargo.toml
CLI/src/: main.rs
Core/: Cargo.toml
Core/bridge/: tailor.h
Core/src/: dirwatch.rs  filewatch.rs  lib.rs
Core/src/client/: dirwatchclient.rs  filewatchclient.rs  mod.rs
Core/test/dirwatch/report_changed/: file1.txt
Core/test/filewatch/: new_content.txt
egui/: .gitignore  Cargo.toml
egui/src/: highlight.rs  lines.rs  main.rs  session.rs
egui/src/panels/: main.rs  mod.rs  session_settings.rs
egui/src/widgets/: mod.rs  recents.rs
egui/src/windows/: about.rs  mod.rs
