[package]
name = "tailor"
version = "0.1.0"
edition = "2021"

[dependencies]
libtailor =  { path = "../Core" }
eframe = "0.24.0"
egui = "0.24.0"
env_logger = "0.10.0"
simplelog = "0.12.1"
log = "0.4.20"
regex = "1.9.5"
app_dirs2 = "2.5.5"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
clipboard = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
rfd = "0.12.1"
futures = "0.3.29"
